--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/nazzy21/wrapper-mysql#readme",
   "dependencies": {
+    "@babel/runtime": "^7.11.2",
     "mysql": "^2.18.1",
     "underscore": "^1.11.0"
   },
@@ -31,6 +32,7 @@
     "gulp-clean": "^0.4.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.2",
-    "history": "^4.10.1"
+    "history": "^4.10.1",
+    "jest": "^26.4.2"
   }
 }
